src/tests/valid_programs/prog1.sdw
GRANJA
SEMILLA contador := 5;
SEMILLA resultado := contador + 3;
MOSTRAR resultado;
CIERRE