src/tests/invalid_programs/error1.sdw
GRANJA
SEMILLA x := 5
MOSTRAR x;
CIERRE